--- a/data/ak8hww_points_pf_sv_mass_decorr.yaml
+++ b/data/ak8hww_points_pf_sv_mass_decorr.yaml
@@ -4,7 +4,10 @@ treename:
 selection:
    ### use `&`, `|`, `~` for logical operations on numpy arrays
    ### can use functions from `math`, `np` (numpy), and `awkward` in the expression
-   (fj_pt>300) & (fj_mass>30)
+   (fj_pt>300) & (fj_msoftdrop>30) & ((fj_isQCD==1) | ((fj_H_WW_4q==1) & (fj_dR_HWW_daus<1.0)) | ((fj_H_WW_elenuqq==1) & (fj_dR_HWW_daus<1.0)) | ((fj_H_WW_munuqq==1) & (fj_dR_HWW_daus<1.0)) )
+
+test_time_selection:
+   (fj_pt>300) & (fj_msoftdrop>30) & ((fj_isQCD==1) | ((fj_H_WW_4q==1) & (fj_dR_HWW_daus<1.0)) | ((fj_H_WW_elenuqq==1) & (fj_dR_HWW_daus<1.0)) | ((fj_H_WW_munuqq==1) & (fj_dR_HWW_daus<1.0)) )
 
 new_variables:
    ### [format] name: formula
@@ -20,12 +23,12 @@ preprocess:
 
 inputs:
    pf_points:
-      length: 50
+      length: 70
       vars: 
          - pfcand_etarel
          - pfcand_phirel
    pf_features:
-      length: 50
+      length: 70
       vars: 
       ### [format 1]: var_name (no transformation)
       ### [format 2]: [var_name, 
@@ -49,16 +52,16 @@ inputs:
          - [pfcand_dxy, 0.0, 300]
          - [pfcand_dxysig, 0, 1.0]
    pf_mask:
-      length: 50
+      length: 70
       vars: 
          - pfcand_mask
    sv_points:
-      length: 5
+      length: 10
       vars:
          - sv_etarel 
          - sv_phirel
    sv_features:
-      length: 5
+      length: 10
       vars:
          - [sv_pt_log, 4, 0.6]
          - [sv_mass, 1.2, 0.3]
@@ -72,7 +75,7 @@ inputs:
          - [sv_d3d, 0.5, 0.2]
          - [sv_d3dsig, 7, 0.02]
    sv_mask:
-      length: 5
+      length: 10
       vars:
          - sv_mask
 
@@ -95,12 +98,14 @@ observers:
    - fj_eta
    - fj_phi
    - fj_mass
+   - fj_msoftdrop
    - fj_lsf3
    - fj_deepTagMD_H4qvsQCD
    - fj_deepTag_HvsQCD
+   - fj_PN_H4qvsQCD
    - fj_dR_W
    - fj_dR_Wstar
-   - fj_nProngs
+   - fj_dR_HWW_daus
 
 weights:
    ### [option 1] use precomputed weights stored in the input files
@@ -111,8 +116,7 @@ weights:
    reweight_method: flat
    reweight_vars:
       fj_pt: [200, 251, 316, 398, 501, 630, 793, 997, 1255, 1579, 1987, 2500]
-      fj_mass: [30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 160, 170, 180, 190, 200, 210, 220, 230, 240, 250, 260]
+      fj_msoftdrop: [30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 160, 170, 180, 190, 200, 210, 220, 230, 240, 250, 260]
    reweight_classes: [fj_isQCD, fj_H_WW_4q, fj_H_WW_elenuqq, fj_H_WW_munuqq] #,fj_isTop]
-   class_weights: [1, 1, 1, 1, 1]
+   class_weights: [1, 1, 1, 1] #, 1]
    reweight_hists:
-
