--- a/data/ak8xcheck_points_pf_sv_mass_decorr.yaml
+++ b/data/ak8xcheck_points_pf_sv_mass_decorr.yaml
@@ -4,10 +4,7 @@ treename:
 selection:
    ### use `&`, `|`, `~` for logical operations on numpy arrays
    ### can use functions from `math`, `np` (numpy), and `awkward` in the expression
-   (fj_pt>300) & (fj_pt<2500) & (fj_msoftdrop>30) & (fj_msoftdrop<260) & ( (fj_isQCD==1) | ((fj_H_WW_4q==1) & (fj_maxdR_HWW_daus<1.0)) | ((fj_H_WW_elenuqq==1) & (fj_maxdR_HWW_daus<1.0)) | ((fj_H_WW_munuqq==1) & (fj_maxdR_HWW_daus<1.0)) )
-
-test_time_selection:
-   (fj_pt>300) & (fj_pt<2500) & (fj_msoftdrop>30) & (fj_msoftdrop<260) & ((fj_isQCD==1) | ((fj_genH_mass==125) && (((fj_H_WW_4q==1) & (fj_maxdR_HWW_daus<1.0)) | ((fj_H_WW_elenuqq==1) & (fj_maxdR_HWW_daus<1.0)) | ((fj_H_WW_munuqq==1) & (fj_maxdR_HWW_daus<1.0)))))
+   (fj_msoftdrop>=30) & (fj_msoftdrop<260) & (fj_pt>200) & (fj_pt<2500) & ( (fj_isQCD==1) | (fj_H_bb==1) | (fj_H_cc==1) | (fj_H_qq==1) )
 
 new_variables:
    ### [format] name: formula
@@ -84,9 +81,8 @@ labels:
    ### [option 1] use `simple` for binary/multi-class classification, then `value` is a list of 0-1 labels
    type: simple
    value: [
-      fj_H_WW_4q, fj_H_WW_elenuqq, fj_H_WW_munuqq,
-      fj_isQCD, 
-      #fj_isTop,
+      fj_H_bb, fj_H_cc, fj_H_qq,
+      fj_isQCD
       ]
    ### [option 2] otherwise use `custom` to define the label, then `value` is a map
    # type: custom
@@ -99,21 +95,7 @@ observers:
    - fj_phi
    - fj_mass
    - fj_msoftdrop
-   - fj_lsf3
-   - fj_deepTagMD_H4qvsQCD
-   - fj_deepTag_HvsQCD
-   - fj_PN_H4qvsQCD
-   - fj_dR_W
-   - fj_dR_Wstar
-   - fj_mindR_HWW_daus
-   - fj_maxdR_HWW_daus
-   - fj_genH_mass
-   - fj_genW_mass
-   - fj_genWstar_mass
-   - fj_genW_pt
-   - fj_genWstar_pt
-   - fj_genW_decay
-   - fj_genWstar_decay
+   - fj_PN_XbbvsQCD
 
 weights:
    ### [option 1] use precomputed weights stored in the input files
@@ -123,8 +105,9 @@ weights:
    use_precomputed_weights: false
    reweight_method: flat
    reweight_vars:
-      fj_pt: [300, 380, 481, 658, 770, 974, 1233, 1561, 1975, 2500]
+      fj_pt: [200, 251, 316, 398, 501, 630, 793, 997, 1255, 1579, 1987, 2500]
       fj_msoftdrop: [30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 160, 170, 180, 190, 200, 210, 220, 230, 240, 250, 260]
-   reweight_classes: [fj_isQCD, fj_H_WW_4q, fj_H_WW_elenuqq, fj_H_WW_munuqq] 
-   class_weights: [1, 1, 1, 1] 
+   reweight_classes: [fj_isQCD, fj_H_bb, fj_H_cc, fj_H_qq]
+   class_weights: [1, 1, 1, 1]
    reweight_hists:
+
