--- a/data/ak15hww_points_pf_sv_pt_decorr.yaml
+++ b/data/ak15hww_points_pf_sv_pt_decorr.yaml
@@ -4,10 +4,10 @@ treename:
 selection:
    ### use `&`, `|`, `~` for logical operations on numpy arrays
    ### can use functions from `math`, `np` (numpy), and `awkward` in the expression
-   (fj_pt>300) & (fj_pt<2500) & (fj_msoftdrop>30) & (fj_msoftdrop<260) & ( (fj_isQCD==1) | ((fj_H_WW_4q==1) & (fj_maxdR_HWW_daus<1.0)) | ((fj_H_WW_elenuqq==1) & (fj_maxdR_HWW_daus<1.0)) | ((fj_H_WW_munuqq==1) & (fj_maxdR_HWW_daus<1.0)) )
+   (fj_pt>300) & (fj_pt<2500) & (fj_msoftdrop>=30) & (fj_msoftdrop<260) & ( (fj_isQCD==1) | ((fj_H_WW_4q==1) & (fj_maxdR_HWW_daus<2.0)) | ((fj_H_WW_elenuqq==1) & (fj_maxdR_HWW_daus<2.0)) | ((fj_H_WW_munuqq==1) & (fj_maxdR_HWW_daus<2.0)) )
 
 test_time_selection:
-   (fj_pt>300) & (fj_pt<2500) & (fj_msoftdrop>30) & (fj_msoftdrop<260) & ((fj_isQCD==1) | ((fj_genH_mass==125) & (((fj_H_WW_4q==1) & (fj_maxdR_HWW_daus<1.0)) | ((fj_H_WW_elenuqq==1) & (fj_maxdR_HWW_daus<1.0)) | ((fj_H_WW_munuqq==1) & (fj_maxdR_HWW_daus<1.0)))))
+   (fj_pt>300) & (fj_pt<2500) & (fj_msoftdrop>=30) & (fj_msoftdrop<260) & ((fj_isQCD==1) | ((fj_genH_mass==125) & (((fj_H_WW_4q==1) & (fj_maxdR_HWW_daus<2.0)) | ((fj_H_WW_elenuqq==1) & (fj_maxdR_HWW_daus<2.0)) | ((fj_H_WW_munuqq==1) & (fj_maxdR_HWW_daus<2.0)))))
 
 new_variables:
    ### [format] name: formula
@@ -99,12 +99,11 @@ observers:
    - fj_phi
    - fj_mass
    - fj_msoftdrop
-   - fj_lsf3
    - fj_deepTagMD_H4qvsQCD
    - fj_deepTag_HvsQCD
-   - fj_PN_H4qvsQCD
    - fj_dR_W
    - fj_dR_Wstar
+   - fj_PN_H4qvsQCD
    - fj_mindR_HWW_daus
    - fj_maxdR_HWW_daus
    - fj_genH_mass
@@ -124,7 +123,7 @@ weights:
    reweight_method: flat
    reweight_vars:
       fj_pt: [300, 380, 481, 658, 770, 974, 1233, 1561, 1975, 2500]
-      fj_msoftdrop: [30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 160, 170, 180, 190, 200, 210, 220, 230, 240, 250, 260]
-   reweight_classes: [fj_isQCD, fj_H_WW_4q, fj_H_WW_elenuqq, fj_H_WW_munuqq] 
-   class_weights: [1, 1, 1, 1] 
+      fj_msoftdrop: [-10000, 10000]
+   reweight_classes: [fj_isQCD, fj_H_WW_4q, fj_H_WW_elenuqq, fj_H_WW_munuqq] #,fj_isTop]
+   class_weights: [1, 0.33, 0.33, 0.33] #, 1]
    reweight_hists:
